# projeto_clusterizacao

./: Clusterização.ipynb  Dashboard_Clusterização.pbix  README.md  clientes_com_cluster.csv  modelo_kmeans.pkl  pyproject.toml
.ipynb_checkpoints/: Clusterização-checkpoint.ipynb
